--- a/index.html
+++ b/index.html
@@ -14,5 +14,8 @@
       rel="stylesheet"
     />
   </head>
-  <body></body>
+  <body>
+    <button class="btn btn--accent btn--block">Buy Now</button>
+    <a href="#" class="btn btn--primary btn--block">Buy Now</a>
+  </body>
 </html>
