--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     />
   </head>
   <body>
-    <button class="btn btn--accent btn--block">Buy Now</button>
-    <a href="#" class="btn btn--primary btn--block">Buy Now</a>
+
+    </div>
   </body>
 </html>
