--- a/index.html
+++ b/index.html
@@ -14,5 +14,20 @@
       rel="stylesheet"
     />
   </head>
-  <body></body>
+  <body>
+    <div class="media">
+      <div class="media__image">
+        <svg class="icon icon--primary">
+          <use xlink:href="images/sprite.svg#snap"></use>
+        </svg>
+      </div>
+      <div class="media__body">
+        <h3 class="media__title">Easy Start & Managed Updates</h3>
+        <p>
+          Lorem ipsum dolor sit amet, consectetur adipisicing elit. Molestiae,
+          ducimus.
+        </p>
+      </div>
+    </div>
+  </body>
 </html>
