--- a/index.html
+++ b/index.html
@@ -14,20 +14,5 @@
       rel="stylesheet"
     />
   </head>
-  <body>
-    <div class="collapsible collapsible--expanded">
-      <header class="collapsible__header">
-        <h2 class="collapsible__heading">Item 1</h2>
-        <svg class="icon collapsible__chevron">
-          <use xlink:href="images/sprite.svg#chevron"></use>
-        </svg>
-      </header>
-      <div class="collapsible__content">
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Quaerat
-        laudantium at dolorum ex distinctio aspernatur corporis omnis, quod
-        expedita necessitatibus?
-      </div>
-    </div>
-    <script src="js/main.js"></script>
-  </body>
+  <body></body>
 </html>
