--- a/index.html
+++ b/index.html
@@ -15,29 +15,16 @@
     />
   </head>
   <body>
-    <section class="block block--dark block--skewed-left hero">
-      <div class="container grid grid--1x2">
-        <header class="block__header hero__content">
-          <h1 class="block__heading">Cloud Hosting for Pros</h1>
-          <p class="hero__tagline">
-            Deploy your websites in less than 60 seconds
-          </p>
-          <a href="" class="btn btn--accent btn--stretched">Get Started</a>
-        </header>
-        <picture>
-          <!-- How does the picture element work with the source element? 
-            What is srcset versus src?
-          Why do we add another source for png on top of the webp?  -->
-          <source
-            type="image/webp"
-            srcset="images/banner.webp 1x, images/banner@2x.webp 2x" />
-          <source
-            type="image/png"
-            srcset="images/banner.png 1x, images/banner@2x.png 2x" />
-          <img class="hero__image" src="images/banner.png" alt=""
-        /></picture>
-      </div>
-    </section>
+    <section class="block container block-domain">
+      <header class="block__header">
+        <h2>Starting at $9 per month</h2>
+        <p>
+          Lorem ipsum dolor sit, amet consectetur adipisicing elit.
+          Exercitationem, animi. Nesciunt recusandae veritatis eum hic assumenda
+          excepturi doloribus, tempora quidem.
+        </p>
+      </header>
+
     <script src="js/main.js"></script>
   </body>
 </html>
