--- a/index.html
+++ b/index.html
@@ -15,6 +15,8 @@
     />
   </head>
   <body>
-    <script src="js/main.js"></script>
+
+      <script src="js/main.js"></script>
+    </section>
   </body>
 </html>
