Defined features block.

--- a/index.html
+++ b/index.html
@@ -14,9 +14,5 @@
       rel="stylesheet"
     />
   </head>
-  <body>
-
-      <script src="js/main.js"></script>
-    </section>
-  </body>
+  <body></body>
 </html>
